--- a/client/package.json
+++ b/client/package.json
@@ -22,26 +22,26 @@
     "@angular/router": "^17.2.0",
     "@ngrx/effects": "^17.1.1",
     "@ngrx/store": "^17.1.1",
-    "@taiga-ui/addon-charts": "^3.69.0",
-    "@taiga-ui/addon-commerce": "^3.69.0",
-    "@taiga-ui/addon-doc": "^3.69.0",
-    "@taiga-ui/addon-mobile": "^3.71.0",
-    "@taiga-ui/addon-preview": "^3.69.0",
-    "@taiga-ui/addon-table": "^3.69.0",
-    "@taiga-ui/addon-tablebars": "^3.69.0",
-    "@taiga-ui/cdk": "^3.69.0",
+    "@taiga-ui/addon-charts": "^3.81.0",
+    "@taiga-ui/addon-commerce": "^3.81.0",
+    "@taiga-ui/addon-doc": "^3.81.0",
+    "@taiga-ui/addon-mobile": "^3.81.0",
+    "@taiga-ui/addon-preview": "^3.81.0",
+    "@taiga-ui/addon-table": "^3.81.0",
+    "@taiga-ui/addon-tablebars": "^3.81.0",
+    "@taiga-ui/cdk": "^3.81.0",
+    "@taiga-ui/core": "^3.81.0",
     "@taiga-ui/experimental": "^3.67.0",
-    "@taiga-ui/icons": "^3.69.0",
-    "@taiga-ui/kit": "^3.69.0",
-    "@taiga-ui/layout": "^3.69.0",
-    "@taiga-ui/styles": "^3.69.0",
-    "@tinkoff/ng-dompurify": "^4.0.0",
-    "dompurify": "^3.0.6",
+    "@taiga-ui/icons": "^3.81.0",
+    "@taiga-ui/kit": "^3.81.0",
+    "@taiga-ui/layout": "^3.81.0",
+    "@taiga-ui/styles": "^3.81.0",
+    "@tinkoff/ng-dompurify": "4.0.0",
+    "dompurify": "3.0.6",
     "firebase": "^10.10.0",
     "firebase-tools": "^13.6.0",
     "ng-lazyload-image": "^9.1.3",
     "rxjs": "~7.8.0",
-    "taiga-ui": "^3.63.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.14.6"
   },
@@ -49,6 +49,7 @@
     "@angular-devkit/build-angular": "^17.2.2",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/dompurify": "3.0.5",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
